fixed ipad layout issues

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -21,6 +21,10 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	background: transparent;
 }
 
+body, input, textarea {
+	line-height: normal;
+}
+
 blockquote, q {
 	quotes: none;
 }
